// test.proto
package testPackage;
syntax = "proto3";
message SubMsg{
    int32 testSubmsg=1;
};
message TestMessage {
  string test_field = 1;
  int32 i32 = 3;
  int64 i64 = 2;
  string str = 4;
  float f32 = 5;
  SubMsg msg=7;
  uint32 u32x = 6;
}

enum TestEnum{
  Key=1;
  E2=20;
  XX=3;
}

